--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: complete-prodcution-e2e-deployment
+  name: my-app-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: complete-prodcution-e2e-app
+      app: my-app
   template:
     metadata:
       labels:
-        app: complete-prodcution-e2e-app
+        app: my-app
     spec:
       containers:
-        - name: complete-prodcution-e2e-app
-          image: dmancloud/complete-prodcution-e2e-github-actions
+        - name: my-app
+          image: frankbett/devops-pipeline:tagname 
           resources:
             limits:
               memory: "256Mi"
